# hdx-scraper-worldbank

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  docker-requirements.txt  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py  run_env  setup.sh  test-requirements.txt  worldbank.py
.github/workflows/: build.yaml  build.yml  publish.yaml  run-python-tests.yml
config/: hdx_dataset_static.yml  hdx_resource_view_static.yml  hdx_topline_dataset_static.yml  project_configuration.yaml  project_configuration.yml  smtp_configuration.yml
src/hdx/scraper/worldbank/: __main__.py  pipeline.py
src/hdx/scraper/worldbank/config/: project_configuration.yaml
tests/: conftest.py  countries_data.py  indicators_data.py  other_data.py  test_worldbank.py  topics_data.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: gender-and-science_AFG.csv  indicators_AFG.csv  qc_gender-and-science_AFG.csv  qc_indicators_AFG.csv  split_gender-and-science_AFG.csv  worldbank_topline.csv
